[gd_scene load_steps=18 format=4 uid="uid://cjmp0nkn138qn"]

[ext_resource type="Texture2D" uid="uid://cxrt4745mu0od" path="res://background.jpg" id="1_o8g25"]
[ext_resource type="Texture2D" uid="uid://cgn11fss5lnub" path="res://mercuryfloor (2).png" id="1_x0maa"]
[ext_resource type="Texture2D" uid="uid://dubsneuvjmacr" path="res://You died (.png" id="2_5fb6x"]
[ext_resource type="Script" uid="uid://bnpa5yc8y48aw" path="res://proxy.gd" id="2_brsq0"]
[ext_resource type="Texture2D" uid="uid://cv3n204hahs3" path="res://Proxy.png" id="3_y2jig"]
[ext_resource type="PackedScene" uid="uid://blh0vdw0jj373" path="res://fallzone.tscn" id="4_y2jig"]
[ext_resource type="Texture2D" uid="uid://b0l6fuy6x374y" path="res://You did it!.png" id="6_ehglh"]
[ext_resource type="Script" uid="uid://bu08bbo57m8tb" path="res://winzone.gd" id="6_nbcmm"]
[ext_resource type="Script" uid="uid://urghjwmtyiav" path="res://button.gd" id="8_nltd2"]
[ext_resource type="Script" uid="uid://chdtg05n6wnw4" path="res://hearts.gd" id="9_xwpsk"]
[ext_resource type="Texture2D" uid="uid://c61yi8xndpcn4" path="res://hearts (1).png" id="10_nltd2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nbcmm"]
size = Vector2(367, 545)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5fb6x"]
texture = ExtResource("1_x0maa")
texture_region_size = Vector2i(370, 360)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-185, -185, 185, -185, 185, -7.7812195, 185, 185, -185, 185)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
22:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
21:21/0 = 0
22:21/0 = 0

[sub_resource type="TileSet" id="TileSet_o8g25"]
tile_size = Vector2i(370, 370)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_5fb6x")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ehglh"]
size = Vector2(232, 4783)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5fb6x"]
size = Vector2(24377, 297)

[sub_resource type="CircleShape2D" id="CircleShape2D_nt14x"]
radius = 206.88644

[node name="mercury" type="Node2D"]

[node name="proxy" type="CharacterBody2D" parent="." groups=["player"]]
position = Vector2(7, 18)
script = ExtResource("2_brsq0")

[node name="Sprite2D" type="Sprite2D" parent="proxy"]
position = Vector2(-352, -687)
scale = Vector2(0.7575137, 0.7628636)
texture = ExtResource("3_y2jig")

[node name="CollisionShape2D" type="CollisionShape2D" parent="proxy"]
position = Vector2(-349.5, -671.5)
shape = SubResource("RectangleShape2D_nbcmm")

[node name="Camera2D" type="Camera2D" parent="proxy"]
position = Vector2(20, 5)
zoom = Vector2(0.2, 0.2)

[node name="TextureRect" type="TextureRect" parent="proxy/Camera2D"]
z_index = -2
offset_left = -3987.0
offset_top = -2647.0
offset_right = 4138.0
offset_bottom = 2595.0
texture = ExtResource("1_o8g25")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD//wAAAAAAAAAAAAAAAAAAAAAAAAAAAAD+/wAAAAAAAAAAAAD9/wAAAAAAAAAAAAD9/wEAAAAAAAAAAAD+/wEAAAAAAAAAAAD//wEAAAAAAAAAAAD+/wIAAAAAAAAAAAD//wIAAAAAAAAAAAAAAAEAAAAAAAAAAAABAAAAAAAAAAAAAAD8/wAAAAAAAAAAAAD+////AAAAAAAAAAD/////AAAAAAAAAAAEAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAGAAIAAAAAAAAAAAAHAAIAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAEAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAAJAP//AAAAAAAAAAAIAP//AAAAAAAAAAAIAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAFAAAAAAAAAAAAAAANAP//AAAAAAAAAAAOAP//AAAAAAAAAAAOAAAAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAPAAIAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAASAAIAAAAAAAAAAAATAAIAAAAAAAAAAAAUAAIAAAAAAAAAAAAUAAEAAAAAAAAAAAATAAEAAAAAAAAAAAASAAEAAAAAAAAAAAARAAEAAAAAAAAAAAARAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAP//AAAAAAAAAAAPAAEAAAAAAAAAAAAQAAEAAAAAAAAAAAATAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAASAP//AAAAAAAAAAASAAAAAAAAAAAAAAAVAAEAAAAAAAAAAAAWAAEAAAAAAAAAAAAVAAIAAAAAAAAAAAATAAMAAAAAAAAAAAASAAMAAAAAAAAAAAAZAAAAAAAAAAAAAAAaAAAAAAAAAAAAAAAbAAAAAAAAAAAAAAAbAP//AAAAAAAAAAAcAP//AAAAAAAAAAAcAAAAAAAAAAAAAAAcAAEAAAAAAAAAAAAbAAEAAAAAAAAAAAAaAAEAAAAAAAAAAAAbAAIAAAAAAAAAAAAcAAIAAAAAAAAAAAAdAAIAAAAAAAAAAAAdAAEAAAAAAAAAAAAeAAEAAAAAAAAAAAAeAAAAAAAAAAAAAAAfAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAdAAAAAAAAAAAAAAAcAP7/AAAAAAAAAAAdAP//AAAAAAAAAAAjAP//AAAAAAAAAAAkAP7/AAAAAAAAAAAlAP7/AAAAAAAAAAAkAP//AAAAAAAAAAAlAP//AAAAAAAAAAAlAAAAAAAAAAAAAAAmAAAAAAAAAAAAAAAmAP//AAAAAAAAAAAmAP7/AAAAAAAAAAAnAP3/AAAAAAAAAAAmAP3/AAAAAAAAAAAnAP7/AAAAAAAAAAAnAP//AAAAAAAAAAAoAP//AAAAAAAAAAApAP//AAAAAAAAAAAoAP7/AAAAAAAAAAAoAAAAAAAAAAAAAAAnAAAAAAAAAAAAAAAtAAAAAAAAAAAAAAAuAAAAAAAAAAAAAAAvAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAAxAAAAAAAAAAAAAAAyAAAAAAAAAAAAAAAyAP//AAAAAAAAAAAxAP//AAAAAAAAAAAwAP//AAAAAAAAAAAvAP//AAAAAAAAAAAzAAAAAAAAAAAAAAAxAAEAAAAAAAAAAAAwAAEAAAAAAAAAAAAvAAEAAAAAAAAAAAAuAAEAAAAAAAAAAAAxAAIAAAAAAAAAAAAwAAIAAAAAAAAAAAAxAAMAAAAAAAAAAAAyAAIAAAAAAAAAAAAyAAEAAAAAAAAAAAA0AAAAAAAAAAAAAAAzAAEAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_o8g25")

[node name="UWin" type="Sprite2D" parent="."]
visible = false
position = Vector2(576.5, 330.50003)
scale = Vector2(1.8937906, 1.9098837)
texture = ExtResource("6_ehglh")

[node name="UDied" type="Sprite2D" parent="."]
visible = false
position = Vector2(576.5, 330.50003)
scale = Vector2(1.8937906, 1.9098837)
texture = ExtResource("2_5fb6x")

[node name="winzone" type="Area2D" parent="."]
position = Vector2(13140, -2215)
collision_layer = 2
script = ExtResource("6_nbcmm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="winzone"]
position = Vector2(6835, 1790)
shape = SubResource("RectangleShape2D_ehglh")

[node name="Button" type="Button" parent="winzone"]
offset_left = -105.0
offset_top = -130.0
offset_right = 191.0
offset_bottom = 140.0
script = ExtResource("8_nltd2")

[node name="fallzone" parent="." instance=ExtResource("4_y2jig")]
position = Vector2(1187, 1131)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="fallzone"]
position = Vector2(6497, 704)
shape = SubResource("RectangleShape2D_5fb6x")

[node name="hearts" type="Node" parent="."]
script = ExtResource("9_xwpsk")

[node name="heart" type="Area2D" parent="hearts"]
collision_layer = 2

[node name="CollisionShape2D1" type="CollisionShape2D" parent="hearts/heart"]
position = Vector2(2171, -697)
shape = SubResource("CircleShape2D_nt14x")

[node name="Sprite2D" type="Sprite2D" parent="hearts/heart"]
position = Vector2(2168.0002, -675)
scale = Vector2(0.63501006, 0.7157701)
texture = ExtResource("10_nltd2")

[node name="heart2" type="Area2D" parent="hearts"]
position = Vector2(-144, 170)
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hearts/heart2"]
position = Vector2(6650, -1350)
shape = SubResource("CircleShape2D_nt14x")

[node name="Sprite2D" type="Sprite2D" parent="hearts/heart2"]
position = Vector2(6645, -1339.0001)
scale = Vector2(0.63501006, 0.7157701)
texture = ExtResource("10_nltd2")

[node name="heart3" type="Area2D" parent="hearts"]
collision_layer = 2

[node name="CollisionShape2D3" type="CollisionShape2D" parent="hearts/heart3"]
position = Vector2(10964, -1320)
shape = SubResource("CircleShape2D_nt14x")

[node name="Sprite2D" type="Sprite2D" parent="hearts/heart3"]
position = Vector2(10967.001, -1305)
scale = Vector2(0.63501006, 0.7157701)
texture = ExtResource("10_nltd2")

[node name="heart4" type="Area2D" parent="hearts"]
collision_layer = 2

[node name="CollisionShape2D4" type="CollisionShape2D" parent="hearts/heart4"]
position = Vector2(15022, -937)
shape = SubResource("CircleShape2D_nt14x")

[node name="Sprite2D2" type="Sprite2D" parent="hearts/heart4"]
position = Vector2(15029, -920)
scale = Vector2(0.63501006, 0.7157701)
texture = ExtResource("10_nltd2")

[node name="heart5" type="Area2D" parent="hearts"]
collision_layer = 2

[node name="CollisionShape2D5" type="CollisionShape2D" parent="hearts/heart5"]
position = Vector2(18573, -1116)
shape = SubResource("CircleShape2D_nt14x")

[node name="Sprite2D" type="Sprite2D" parent="hearts/heart5"]
position = Vector2(18568.002, -1087)
scale = Vector2(0.63501006, 0.7157701)
texture = ExtResource("10_nltd2")

[connection signal="body_entered" from="winzone" to="winzone" method="_on_body_entered"]
[connection signal="pressed" from="winzone/Button" to="winzone" method="_on_button_pressed"]
[connection signal="body_entered" from="fallzone" to="proxy" method="_on_fallzone_body_entered"]
[connection signal="body_entered" from="hearts/heart" to="hearts" method="_on_heart_body_entered"]
[connection signal="body_entered" from="hearts/heart2" to="hearts" method="_on_heart_2_body_entered"]
[connection signal="body_entered" from="hearts/heart3" to="hearts" method="_on_heart_3_body_entered"]
[connection signal="body_entered" from="hearts/heart4" to="hearts" method="_on_heart_4_body_entered"]
[connection signal="body_entered" from="hearts/heart5" to="hearts" method="_on_heart_5_body_entered"]
